From 9145c64 (closure-adv):
==========================

(*) Add script write_PRISim_bispectrum_phase_to_npz.py to the
repository in the scripts/ folder to write bispectrum phase from a
PRISim simulation output to a NPZ file for further processing.

(*) Add the YAML file containing input parameters to the repository
for the script scripts/write_PRISim_bispectrum_phase_to_npz.py to
read and process

In prisim/bispectrum_phase.py,

(*) Add function write_PRISim_bispectrum_phase_to_npz() along with
docstring to write bispectrum phase from a PRISim simulation output
to a NPZ file for further processing

From 774df2a (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) Rename member function compute_power_spectrum() under class
ClosurePhaseDelaySpectrum to compute_power_spectrum_old() which is
now deprecated and replaced by a new compute_power_spectrum(). Update
member function and class docstrings accordingly

From d44b053 (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) Remove commented lines in member function compute_power_spectrum()
of class ClosurePhaseDelaySpectrum

From 9fc66a8 (closure-adv):
==========================

In setup.py,

(*) Indicate matplotlib version to be < 3.0 in install_requires and
setup_requires

From aaf29f9 (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) Major updates to member function compute_power_spectrum() of class
ClosurePhaseDelaySpectrum. Now computes under three data pools, namely,
"whole", "submodel", and "residual". Docstring yet to be updated.

From f099889 (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) Minor update in member function compute_power_spectrum() of class
ClosurePhaseDelaySpectrum

From bb0ef3c (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) Update docstring of member function FT() of class
ClosurePhaseDelaySpectrum

From 708a945 (closure-adv):